--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,176 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: 'Times New Roman';
+    src: url('./assets/fonts/Times New Roman.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Times New Roman Bold';
+    src: url('./assets/fonts/Times New Roman Bold.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Times New Roman Bold Italic';
+    src: url('./assets/fonts/Times New Roman Bold Italic.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Times New Roman Italic';
+    src: url('./assets/fonts/Times New Roman Italic.ttf') format('truetype');
+}
+
+body{
+    font-family: 'Times New Roman', serif !important;
+    /* background-color: #eaeaea !important; */
+    overflow-x: hidden !important;
+}
+
+
+/* Header css start */
+
+.header{
+    height: 16px;
+}
+
+.bg-green {
+    background-color: #3b5d50 ;
+}
+
+.carousel-item {
+    height: 50vh;
+}
+
+.bg-carousel {
+    background-color: #3b5d50 ;
+}
+
+.carousel-caption {
+    text-align: left;
+}
+
+.bg-green a {
+    color: #fff !important;
+}
+
+.navbar-brand {
+    font-size: 32px !important;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.header-links li a {
+    font-size: 20px;
+    position: relative;
+    text-decoration: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.header-links li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 4px; 
+    height: 4px;
+    background-color: #f9bf29; 
+    width: 0; 
+    transition: width 0.3s ease;
+}
+
+.header-links li a:hover::after {
+    width: 100%; 
+}
+
+/* Underline for active link */
+.header-links li a.active-link::after {
+    width: 100%; /* Expand underline for active link */
+}
+
+/* Optional: Change text color on hover and active */
+.header-links li a:hover,
+.header-links li a.active-link {
+    color: #f9bf29; /* Change text color on hover and active */
+}
+
+/* Header css end */
+.main-content {
+    min-height: calc(100vh - 140px);
+}
+
+  @media screen and (orientation: landscape) {
+    .home-carousel img {
+      height: 50vh;
+    }
+  }
+  
+.yellow-btn {
+    color: #000 !important;
+    background-color: #f9bf29 !important;
+    border-color: #f9bf29 !important;
+    border-radius: 25px !important;
+    padding: 10px 25px !important;
+}
+
+.bg-white-btn {
+    color: #fff !important;
+    border-color: #fff !important;
+    border-radius: 25px !important;
+    padding: 10px 25px !important;
+}
+
+.para-head {
+    font-size: 18px;
+}
+
+.img-3 {
+    height: 38vh !important;
+}
+
+.testi-img {
+   width: 50%;
+   border-radius: 50%;
+}
+
+.testi-span{
+    cursor: pointer;
+    position: relative;
+    width: 58px !important;
+    height: 58px !important;
+    line-height: 58px;
+    border-radius: 50%;
+    background: rgba(57, 58, 58, 0.1);
+    color: #2f2f2f;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease;
+}
+
+.testi-span::before{
+    top: 20px;
+    position: absolute;
+    left: 23px;
+}
+
+.bg-gray{
+    background-color: rgb(233, 232, 232);
+}
+.social-links a{
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    display: inline-block;
+    background: #dce5e4;
+    color: #3b5d50;
+    border-radius: 50%;
+}
+
+.list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+.list-unstyled li {
+    font-size: 20px;
+}
+.bg-lightgreen{
+    background-color: #93afab !important;
+}
